expertiment with new flow WIP
